[package]
name = "ephyr"
version = "0.2.0-dev"
edition = "2018"
authors = ["Kai Ren <tyranron@gmail.com>"]
publish = false

[profile.release]
lto = "thin"
codegen-units = 1

[dependencies]
anyhow = "1.0"
byteorder = "1.3"
config = { version = "0.10", default-features = false, features = ["json"] }
derive_more = "0.99.5"
futures = "0.3"
hex = "0.4"
humantime = "2.0"
once_cell = { version = "1.4", features = ["parking_lot"] }
rand = "0.7"
serde = "1.0"
serde_humantime = { version = "1.0", package = "humantime-serde" }
slog = "2.5"
slog-async = "2.5"
slog-scope = "4.3"
slog-term = "2.5"
smart-default = "0.6"
structopt = "0.3"
url = { version = "2.1", features = ["serde"] }
validator = "0.10"
validator_derive = "0.10"
[dependencies.backoff]
    git = "https://github.com/tyranron/backoff"
    rev = "7f4d8f02a0f0bd48e507500a66f4b34fc409490a" # branch = "async"
    features = ["tokio"]
[dependencies.decimal]
    version = "1.4"
    package = "rust_decimal"
    features = ["serde-float"]
[dependencies.tokio]
    version = "0.2"
    features = ["io-util", "process", "rt-core", "signal", "stream"]
[dependencies.tsclientlib]
    git = "https://github.com/ALLATRA-IT/tsclientlib"
    rev = "9a063409430d95b4fc64dfbf44758d938ebc8d59" # branch = "master"
[dependencies.tsproto-packets]
    git = "https://github.com/ALLATRA-IT/tsclientlib"
    rev = "9a063409430d95b4fc64dfbf44758d938ebc8d59" # branch = "master"

[dev-dependencies]
serde_json = "1.0"
