[package]
name = "ephyr"
version = "0.3.0-dev"
edition = "2018"
authors = ["Kai Ren <tyranron@gmail.com>"]
publish = false

[profile.release]
lto = "thin"
codegen-units = 1

[dependencies]
actix-rt = "1.1"
actix-web = "2.0"
anyhow = "1.0"
byteorder = "1.3"
chrono = { version = "0.4", features = ["serde"] }
config = { version = "0.10", default-features = false, features = ["json"] }
derive_more = "0.99.5"
futures = "0.3"
hex = "0.4"
humantime = "2.0"
isolang = { version = "1.0", features = ["serde_serialize"] }
mime = "0.3"
mime_serde_shim = "0.2"
once_cell = { version = "1.4", features = ["parking_lot"] }
rand = "0.7"
regex = "1.3"
reqwest = { version = "0.10", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
serde_humantime = { version = "1.0", package = "humantime-serde" }
serde_millis = "0.1"
serde_repr = "0.1"
slog = "2.5"
slog-async = "2.5"
slog-scope = "4.3"
slog-term = "2.5"
smart-default = "0.6"
structopt = "0.3"
url = { version = "2.1", features = ["serde"] }
validator = "0.10"
validator_derive = "0.10"
[dependencies.backoff]
    git = "https://github.com/tyranron/backoff"
    rev = "7f4d8f02a0f0bd48e507500a66f4b34fc409490a" # branch = "async"
    features = ["tokio"]
[dependencies.decimal]
    version = "1.4"
    package = "rust_decimal"
    features = ["serde-float"]
[dependencies.tokio]
    version = "0.2"
    features = [
        "fs", "io-util", "process", "rt-core", "signal", "stream", "sync",
    ]
[dependencies.tsclientlib]
    git = "https://github.com/ALLATRA-IT/tsclientlib"
    rev = "9a063409430d95b4fc64dfbf44758d938ebc8d59" # branch = "master"
[dependencies.tsproto-packets]
    git = "https://github.com/ALLATRA-IT/tsclientlib"
    rev = "9a063409430d95b4fc64dfbf44758d938ebc8d59" # branch = "master"
