[package]
name = "ephyr-ui"
version = "0.0.0"
edition = "2018"
authors = ["Kai Ren <tyranron@gmail.com>"]
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = "thin"
codegen-units = 1

[dependencies]
console_error_panic_hook = "0.1"
dominator = "0.5"
futures-signals = "0.3.0"
wasm-bindgen = "0.2"
[dependencies.web-sys]
    version = "0.3"
    features = ["Storage", "Url"]
