[package]
name = "ephyr-serde"
version = "0.1.0"
edition = "2018"
authors = ["Kai Ren <tyranron@gmail.com>"]
publish = false

[features]
seconds = []
timelike = ["serde/derive"]
timezone = ["chrono", "serde/derive"]

[dependencies]
chrono = { version = "0.4", default-features = false, optional = true }
serde = "1.0.117"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
