[package]
name = "ephyr-mixer"
version = "0.4.0"
edition = "2018"
authors = ["Kai Ren <tyranron@gmail.com>"]
publish = false

[dependencies]
anyhow = "1.0"
backoff = { version = "0.2", features = ["tokio"] }
byteorder = "1.3"
config = { version = "0.10", features = ["json"], default-features = false }
ephyr-log = { version = "0.1", path = "../../common/log" }
futures = "0.3"
hex = "0.4"
humantime = "2.0"
once_cell = { version = "1.4", features = ["parking_lot"] }
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_humantime = { version = "1.0", package = "humantime-serde" }
smart-default = "0.6"
structopt = "0.3"
url = { version = "2.1", features = ["serde"] }
validator = { version = "0.11", features = ["derive"] }
[dependencies.decimal]
    version = "1.4"
    package = "rust_decimal"
    features = ["serde-float"]
[dependencies.derive_more]
    version = "0.99.11"
    features = ["display", "error"]
    default-features = false
[dependencies.tokio]
    version = "0.2"
    features = ["io-util", "process", "rt-core", "signal", "stream"]
[dependencies.tsclientlib]
    git = "https://github.com/ReSpeak/tsclientlib"
    rev = "ee95d775ad6dda552847bf9f484ab3ff1a70f833" # branch = "master"
[dependencies.tsproto-packets]
    git = "https://github.com/ReSpeak/tsclientlib"
    rev = "ee95d775ad6dda552847bf9f484ab3ff1a70f833" # branch = "master"

[dev-dependencies]
serde_json = "1.0"
