[package]
name = "ephyr-restreamer"
version = "0.1.0"
edition = "2018"
authors = ["Kai Ren <tyranron@gmail.com>"]
publish = false

[dependencies]
actix-web = "3.0"
anyhow = "1.0"
askama = { version = "0.10", default-features = false }
ephyr-log = { version = "0.1", path = "../../common/log" }
futures = "0.3"
futures-signals = "0.3"
once_cell = { version = "1.4", features = ["parking_lot"] }
rand = "0.7"
regex = "1.4"
send_wrapper = { version = "0.5", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smart-default = "0.6"
structopt = "0.3"
url = { version = "2.1", features = ["serde"] }
xxhash = { version = "0.8", package = "xxhash-rust", features = ["xxh3"] }
[dependencies.derive_more]
    version = "0.99.11"
    features = ["deref", "display", "error", "from"]
    default-features = false
[dependencies.juniper]
    git = "https://github.com/graphql-rust/juniper"
    rev = "f3170c7adf4405cc119d2129f78a591fe2fcd32b" # branch = "master"
[dependencies.juniper_actix]
    git = "https://github.com/graphql-rust/juniper"
    rev = "f3170c7adf4405cc119d2129f78a591fe2fcd32b" # branch = "master"
    features = ["subscriptions"]
[dependencies.juniper_graphql_ws]
    git = "https://github.com/graphql-rust/juniper"
    rev = "f3170c7adf4405cc119d2129f78a591fe2fcd32b" # branch = "master"
[dependencies.tokio]
    version = "0.2"
    features = ["fs", "io-util", "process", "rt-core"]
