[package]
name = "ephyr-restreamer"
version = "0.2.0-rc.1"
edition = "2018"
authors = ["Kai Ren <tyranron@gmail.com>"]
publish = false
default-run = "ephyr-restreamer"

[dependencies]
actix-service = "1.0"
actix-web = "3.0"
actix-web-httpauth = "0.5"
actix-web-static-files = "3.0"
anyhow = "1.0"
argon2 = { version = "0.8", package = "rust-argon2", default-features = false }
askama = { version = "0.10", default-features = false }
backoff = { version = "0.2", features = ["tokio"] }
byteorder = "1.3"
ephyr-log = { version = "0.1", path = "../../common/log" }
futures = "0.3"
futures-signals = "0.3"
hex = "0.4"
humantime = "2.0"
juniper = "0.15"
juniper_actix = { version = "0.2", features = ["subscriptions"] }
juniper_graphql_ws = "0.2"
once_cell = { version = "1.4", features = ["parking_lot"] }
public-ip = "0.1"
rand = "0.7"
regex = "1.4"
reqwest = { version = "0.10", features = ["json"], default-features = false }
send_wrapper = { version = "0.5", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_humantime = { version = "1.0", package = "humantime-serde" }
serde_json = "1.0"
smart-default = "0.6"
structopt = "0.3"
url = { version = "2.1", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
[dependencies.derive_more]
    version = "0.99.11"
    features = ["as_ref", "deref", "display", "error", "from"]
    default-features = false
[dependencies.tokio]
    version = "0.2"
    features = ["fs", "io-util", "process", "rt-core", "stream", "sync", "time"]
[dependencies.tsclientlib]
    git = "https://github.com/ReSpeak/tsclientlib"
    rev = "ee95d775ad6dda552847bf9f484ab3ff1a70f833" # branch = "master"
[dependencies.tsproto-packets]
    git = "https://github.com/ReSpeak/tsclientlib"
    rev = "ee95d775ad6dda552847bf9f484ab3ff1a70f833" # branch = "master"
[dependencies.zeromq]
    git = "https://github.com/zeromq/zmq.rs"
    rev = "5bc792a5b8876d7281e9bd933519d49a62b76caf" # tokio = "0.2"

[build-dependencies]
anyhow = "1.0"
actix-web-static-files = "3.0"
